[gd_scene load_steps=2 format=3 uid="uid://b8crjq12ork7"]

[ext_resource type="Script" path="res://Scene/TwoPlayerScreenView.gd" id="1_07734"]

[node name="TwoPlayerScreenView" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_07734")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
z_as_relative = false
offset_right = 320.0
offset_bottom = 112.0
size_flags_vertical = 4
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
disable_3d = true
handle_input_locally = false
scaling_3d_mode = 1
fsr_sharpness = 0.0
canvas_item_default_texture_filter = 0
size = Vector2i(320, 112)
size_2d_override = Vector2i(320, 224)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="CameraP1" type="Camera2D" parent="CanvasLayer/SubViewportContainer/SubViewport"]
limit_left = 0
limit_top = 0
limit_right = 16384
limit_bottom = 2048

[node name="SubViewportContainer2" type="SubViewportContainer" parent="CanvasLayer"]
z_as_relative = false
offset_top = 112.0
offset_right = 320.0
offset_bottom = 224.0
size_flags_vertical = 6
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer2"]
disable_3d = true
handle_input_locally = false
scaling_3d_mode = 1
fsr_sharpness = 0.0
canvas_item_default_texture_filter = 0
size = Vector2i(320, 112)
size_2d_override = Vector2i(320, 224)
size_2d_override_stretch = true
render_target_update_mode = 4

[node name="CameraP2" type="Camera2D" parent="CanvasLayer/SubViewportContainer2/SubViewport"]
limit_left = 0
limit_top = 0
limit_right = 16384
limit_bottom = 2048
